# Kyouth-data-ai-

./: .gitignore  README.md
Week 1/: .gitignore  main.py  pyproject.toml
Week 1/data/0_source/: AI & Workflow Automation Associate Job in Kuala Lumpur - Jobstreet.mhtml  AI APPLICATION ENGINEER Job in Kuala Lumpur City Centre, Kuala Lumpur - Jobstreet.mhtml  AI Chatbot Developer Job in Petaling Jaya, Selangor - Jobstreet.mhtml  AI ENGINEER Job in Melaka - Jobstreet.mhtml  AI Engineer (Junior) Job in Petaling Jaya, Selangor - Jobstreet.mhtml  AI Engineer (Python, Gen AI) Job in Cyberjaya, Selangor - Jobstreet.mhtml  AI Engineer (Python, GenAI) Job in Cyberjaya, Selangor - Jobstreet.mhtml  AI Engineer (Solution) Job in Bandar Puteri Puchong, Selangor - Jobstreet.mhtml  AI Engineer Job in Bayan Lepas, Penang - Jobstreet.mhtml  AI Engineer Job in Simpang Ampat, Penang - Jobstreet.mhtml  (+90 more)
Week 1/src/: ingestor.py  loader.py  processor.py  profiler.py
Week 2/: .gitignore  README.md  db_server.py  find_skill_gaps.py  jobs_d1.db  main.py  prompt_model.py  pyproject.toml  rate_limits.txt  resume_d3_eval.txt  tag_data.py
Week 3/: jobs_d1.db  resume_d3.txt
week_3/: .gitignore  docker-compose.yml
week_3/backend/: .dockerignore  Dockerfile  pyproject.toml
week_3/backend/src/: app.py
week_3/backend/src/week_2/: db_server.py  find_skill_gaps.py  jobs_d1.db  tag_data.py
week_3/frontend/: .dockerignore  Dockerfile  README.md  pyproject.toml
week_3/frontend/data/: jobs.db
week_3/frontend/src/: app.py
week_3/frontend/src/templates/: chat_page.html  dashboard.html
(+185 files in other folders)
